--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "datatables.net-bs5": "^1.13.4",
+        "datatables.net-responsive-bs5": "^2.4.1",
         "jquery": "^3.6.4",
         "typicons.font": "^2.1.2"
     }
