--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "-": "^0.0.1",
+        "datatables.net-dt": "^1.13.4",
+        "datatables.net-responsive-dt": "^2.4.1",
+        "datatables.net-scroller-dt": "^2.1.1",
+        "datatables.net-searchbuilder-dt": "^1.4.2",
         "jquery": "^3.6.4",
+        "save": "^2.9.0",
         "typicons.font": "^2.1.2"
     }
 }
