--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
@@ -14,6 +13,7 @@
     },
     "dependencies": {
         "datatables.net-bs5": "^1.13.4",
+        "datatables.net-buttons-dt": "^2.3.6",
         "datatables.net-responsive-bs5": "^2.4.1",
         "jquery": "^3.6.4",
         "select2": "^4.1.0-rc.0",
