--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "datatables.net-responsive-bs5": "^2.4.1",
         "jquery": "^3.6.4",
         "select2": "^4.1.0-rc.0",
+        "sweetalert2": "^11.7.5",
         "typicons.font": "^2.1.2"
     }
 }
