--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "datatables.net-bs5": "^1.13.4",
         "datatables.net-buttons-dt": "^2.3.6",
         "datatables.net-responsive-bs5": "^2.4.1",
+        "datatables.net-select-dt": "^1.6.2",
         "jquery": "^3.6.4",
         "jquery-validation": "^1.19.5",
         "select2": "^4.1.0-rc.0",
