--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "datatables.net-bs5": "^1.13.4",
         "datatables.net-buttons-dt": "^2.3.6",
+        "datatables.net-dt": "^1.13.4",
         "datatables.net-responsive-bs5": "^2.4.1",
         "datatables.net-select-dt": "^1.6.2",
         "jquery": "^3.6.4",
